# MiniLang_Compiler

./: CMakeLists.txt  Dylan_Galea_84296M_Documentation.docx  MiniLangI.cpp  MiniLangICompilation.bat  README.md  README_TO_COMPILE_AND_RUN.txt  main.cpp  ~$lan_Galea_84296M_Documentation.docx  ~WRL0594.tmp
ASTHierarchy/: ASTExprNode.cpp  ASTExprNode.h  ASTNode.cpp  ASTNode.h  ASTStatementNode.cpp  ASTStatementNode.h  NegationOperator.h  Operators.h  Type.h
ASTHierarchy/Expression/: ASTBinaryExprNode.cpp  ASTBinaryExprNode.h  ASTBooleanLiteralExpressionNode.cpp  ASTBooleanLiteralExpressionNode.h  ASTFnCallExprNode.cpp  ASTFnCallExprNode.h  ASTIdentifierExprNode.cpp  ASTIdentifierExprNode.h  ASTLiteralExprNode.h  ASTNumberExprNode.cpp  ASTNumberExprNode.h  ASTStringLiteralExprNode.cpp  ASTStringLiteralExprNode.h  ASTSubExprNode.cpp  ASTSubExprNode.h  ASTUnaryExprNode.cpp  ASTUnaryExprNode.h
ASTHierarchy/Statement/: ASTAssignStatementNode.cpp  ASTAssignStatementNode.h  ASTBlockStatementNode.cpp  ASTBlockStatementNode.h  ASTFuncDeclStatementNode.cpp  ASTFuncDeclStatementNode.h  ASTIfStatementNode.cpp  FormalParam.cpp  (+13 more)
Exceptions/: CompilingErrorException.cpp  CompilingErrorException.h
Lexer/: Keywords.cpp  Keywords.h  LexerImplementation.cpp  LexerImplementation.h  SourceCodeInput  State.h  Token.cpp  Token.h
Parser/: PredictiveParser.cpp  PredictiveParser.h
TestPrograms/: Factorial  PowerFunction  Test  Test2
Visitors/: InterpreterExecutionPass.cpp  InterpreterExecutionPass.h  SemanticAnalysis.cpp  SemanticAnalysis.h  Visitor.h  XMLGenerator.cpp  XMLGenerator.h
(+8 files in other folders)
